--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE HTML>
-<!DOCTYPE html>
 <html lang="pt-BR">
     <head>
         <meta charset="UTF-8">
@@ -7,7 +6,8 @@
         <link rel="stylesheet" media="screen and (max-width: 600px)" href="smallscreen.css">
         <link rel="stylesheet" media="screen and (min-width: 992px)" href="widescreen.css">
         <link rel="stylesheet" media="screen and (min-width: 600px) and (max-width: 992px)" href="style.css">
-        <title>Página Inicial</title>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+        <title>Forfun - Página Inicial</title>
     </head>
     <body>
         <header>
@@ -82,12 +82,13 @@
         </article>
 
         <footer>
+            <p>&copy 2020</p>
             <a href="https://www.instagram.com/forfunoficial"><img src="img/Contato/Instagram.png"></a>
             <a href="https://twitter.com/forfunoficial"><img src="img/Contato/Twitter.png"></a>
             <a href="https://pt-br.facebook.com/ForfunOficial/"><img src="img/Contato/Facebook.png"></a>
             <a href="https://www.youtube.com/channel/UCG2dP282Bn5hS-jB7jDcyEA"><img src="img/Contato/Youtube.png"></a>
         </footer>
         
-       <!-- <script src="script.js"></script> -->
+       <script src="script.js"></script> 
     </body>
 </html>
