Fixando footer, criação 'Quem Somos', redimensionando imagens, redimensionando cabeçalho

--- a/contato.html
+++ b/contato.html
@@ -22,7 +22,12 @@
             </nav>
         </header>
         
-        <footer>
+
+
+
+
+        
+        <footer class="quemSomosFooter">
             <p>&copy 2020</p>
             <a href="https://www.instagram.com/forfunoficial"><img src="img/Contato/Instagram.png"></a>
             <a href="https://twitter.com/forfunoficial"><img src="img/Contato/Twitter.png"></a>
