Adicionando informações da banda -fonte: carecadafonte-

--- a/eventos.html
+++ b/eventos.html
@@ -21,8 +21,16 @@
                 </ul>
             </nav>
         </header>
+
+        <div id="eventosProx">
+           ADD  Próximos eventos
+        </div>
+        <div id="eventosPass">
+           ADD  galeria eventos 
+        </div>
+
         
-        <footer>
+        <footer class="Footer">
             <p>&copy 2020</p>
             <a href="https://www.instagram.com/forfunoficial"><img src="img/Contato/Instagram.png"></a>
             <a href="https://twitter.com/forfunoficial"><img src="img/Contato/Twitter.png"></a>
