--- a/produtos.html
+++ b/produtos.html
@@ -21,7 +21,37 @@
                 </ul>
             </nav>
         </header>
+
+
+        <div id="itens">
+            <ul>
+                <li>Todos os produtos</li>
+                <li>Camisetas</li>
+                <li>Canecas</li>
+                <li>Bonés</li>
+            </ul>
+        </div>
+
+        <!--FINALIZAR ESTILIZAÇÃO-->
+        <div id="todosProdutos">
+            <div>
+                <div>
+                    <p>Camiseta Alegria Compartilhada</p>
+                    <img src="img/Camisetas/CamisetaAlegriaCompartilhada.png" alt="Camiseta Alegria Compartilhada">
+                    <p>P M G</p>
+                    <p>R$23,99</p>
+                </div>
+                <div>
+                    <p>Camiseta Alegria Compartilhada</p>
+                    <img src="img/Camisetas/CamisetaAlegriaCompartilhada2.png" alt="Camiseta Alegria Compartilhada">
+                    <p>P M G</p>
+                    <p>R$23,99</p>
+                </div>
+            </div>
+
+        </div>
         
+
         <footer>
             <p>&copy 2020</p>
             <a href="https://www.instagram.com/forfunoficial"><img src="img/Contato/Instagram.png"></a>
@@ -32,4 +62,4 @@
         
        <script src="script.js"></script> 
     </body>
-</html>
+</html>,
