--- a/contato.html
+++ b/contato.html
@@ -52,7 +52,7 @@
             </div>
         </form>
 
-        <footer class="quemSomosFooter">
+        <footer class="Footer">
             <p>&copy 2020</p>
             <a href="https://www.instagram.com/forfunoficial"><img src="img/Contato/Instagram.png"></a>
             <a href="https://twitter.com/forfunoficial"><img src="img/Contato/Twitter.png"></a>
