--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" media="screen and (max-width: 600px)" href="smallscreen.css">
+       <!--<link rel="stylesheet" media="screen and (max-width: 600px)" href="smallscreen.css">
         <link rel="stylesheet" media="screen and (min-width: 992px)" href="widescreen.css">
-        <link rel="stylesheet" media="screen and (min-width: 600px) and (max-width: 992px)" href="style.css">
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+        <link rel="stylesheet" media="screen and (min-width: 600px) and (max-width: 992px)" href="style.css">-->
+        <link rel="stylesheet" href="widescreen.css">
         <title>Forfun - Página Inicial</title>
     </head>
     <body>
@@ -22,6 +22,7 @@
                 </ul>
             </nav>
         </header>
+
         <div id="banner">
             <img src="img/Fotos/Forfun1.jpg">
         </div>
@@ -60,6 +61,7 @@
                         </tr>
                     </table>
             </section>
+            
             <section id="sectionRight">
                 <p><a href=produtos.html">Ver mais</a></p>
             </section>
