--- a/produtos.html
+++ b/produtos.html
@@ -22,35 +22,89 @@
             </nav>
         </header>
 
-
-        <div id="itens">
-            <ul>
-                <li>Todos os produtos</li>
-                <li>Camisetas</li>
-                <li>Canecas</li>
-                <li>Bonés</li>
-            </ul>
-        </div>
-
-        <!--FINALIZAR ESTILIZAÇÃO-->
-        <div id="todosProdutos">
-            <div>
+        <div class="produtos">
+            <div class="itens">
+                <ul>
+                    <li><a href="produtos.html" class="produtoSelecionado">Camisetas</a></li> <hr>
+                    <li><a href="produtosC.html">Canecas</a></li> <hr>
+                    <li><a href="produtosB.html">Bonés</a></li> <hr>
+                </ul>
+            </div>
+            <div class="todosProdutos">
                 <div>
-                    <p>Camiseta Alegria Compartilhada</p>
-                    <img src="img/Camisetas/CamisetaAlegriaCompartilhada.png" alt="Camiseta Alegria Compartilhada">
-                    <p>P M G</p>
-                    <p>R$23,99</p>
+                    <div class="div1">
+                        <p>Camiseta Alegria Compartilhada - Branca</p>
+                        <img src="img/Camisetas/CamisetaAlegriaCompartilhada.png" alt="Camiseta Alegria Compartilhada">
+                        <div class="produtosLine">
+                            <button class="tamanhos">P</button>
+                            <button class="tamanhos">M</button>
+                            <button class="tamanhos">G</button>
+                            <button class="comprar">COMPRAR</button>
+                        </div>
+                        <p class="preco">R$23,99</p>
+                    </div>
+                    <div class="div2">
+                        <p>Camiseta Alegria Compartilhada - Branca</p>
+                        <img src="img/Camisetas/CamisetaAlegriaCompartilhada2.png" alt="Camiseta Alegria Compartilhada">
+                        <div class="produtosLine">
+                            <button class="tamanhos">P</button>
+                            <button class="tamanhos">M</button>
+                            <button class="tamanhos">G</button>
+                            <button class="comprar">COMPRAR</button>
+                        </div>
+                        <p class="preco">R$23,99</p>
+                    </div>
                 </div>
                 <div>
-                    <p>Camiseta Alegria Compartilhada</p>
-                    <img src="img/Camisetas/CamisetaAlegriaCompartilhada2.png" alt="Camiseta Alegria Compartilhada">
-                    <p>P M G</p>
-                    <p>R$23,99</p>
+                    <div class="div1">
+                        <p>Camiseta Alegria Compartilhada - Preta</p>
+                        <img src="img/Camisetas/CamisetaAlegriaCompartilhadaPreta.png" alt="Camiseta Alegria Compartilhada">
+                        <div class="produtosLine">
+                            <button class="tamanhos">P</button>
+                            <button class="tamanhos">G</button>
+                            <button class="tamanhos">GG</button>
+                            <button class="comprar">COMPRAR</button>
+                        </div>
+                        <p class="preco">R$23,99</p>
+                    </div>
+                    <div class="div2">
+                        <p>Camiseta Alegria Compartilhada - Preta</p>
+                        <img src="img/Camisetas/CamisetaAlegriaCompartilhadaPreta2.png" alt="Camiseta Alegria Compartilhada">
+                        <div class="produtosLine">
+                            <button class="tamanhos">PP</button>
+                            <button class="tamanhos">M</button>
+                            <button class="tamanhos">XG</button>
+                            <button class="comprar">COMPRAR</button>
+                        </div>
+                        <p class="preco">R$23,99</p>
+                    </div>
+                </div>
+                <div>
+                    <div class="div1">
+                        <p>Camiseta Básica - Verde</p>
+                        <img src="img/Camisetas/CamisetaForfunVerde.png" alt="Camiseta Forfun">
+                        <div class="produtosLine">
+                            <button class="tamanhos">PP</button>
+                            <button class="tamanhos">M</button>
+                            <button class="tamanhos">XG</button>
+                            <button class="comprar">COMPRAR</button>
+                        </div>
+                        <p class="preco">R$23,99</p>
+                    </div>
+                    <div class="div2">
+                        <p>Camiseta Nu - Branca</p>
+                        <img src="img/Camisetas/CamisetaNu.png" alt="Camiseta Nu">
+                        <div class="produtosLine">
+                            <button class="tamanhos">P</button>
+                            <button class="tamanhos">M</button>
+                            <button class="tamanhos">G</button>
+                            <button class="comprar">COMPRAR</button>
+                        </div>
+                        <p class="preco">R$23,99</p>
+                    </div>
                 </div>
             </div>
-
         </div>
-        
 
         <footer>
             <p>&copy 2020</p>
@@ -62,4 +116,4 @@
         
        <script src="script.js"></script> 
     </body>
-</html>,
+</html>
