--- a/produtosB.html
+++ b/produtosB.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" media="screen and (max-width: 600px)" href="smallscreen.css">
         <link rel="stylesheet" media="screen and (min-width: 992px)" href="widescreen.css">
         <link rel="stylesheet" media="screen and (min-width: 600px) and (max-width: 992px)" href="style.css">
-        <title>Forfun - Eventos</title>
+        <title>Forfun - Produtos</title>
     </head>
     <body>
         <header>
@@ -22,14 +22,38 @@
             </nav>
         </header>
 
-        <div id="eventosProx">
-           ADD  Próximos eventos
-        </div>
-        <div id="eventosPass">
-           ADD  galeria eventos 
-        </div>
+        <div class="produtos">
+            <div class="itens">
+                <ul>
+                    <li><a href="produtos.html">Camisetas</a></li> <hr>
+                    <li><a href="produtosC.html">Canecas</a></li> <hr>
+                    <li><a href="produtosB.html" class="produtoSelecionado">Bonés</a></li> <hr>
+                </ul>
+            </div>
+            <div class="todosProdutos">
+                <div>
+                    <div class="div1">
+                        <p>Boné Forfun - Branco e Preto</p>
+                        <img src="img/Bone/BoneForfun.png" alt="Camiseta Alegria Compartilhada">
+                        <div class="bones">
+                            <button class="comprar">COMPRAR</button>
+                            <p class="preco">R$21,99</p>
+                        </div>
+                    </div>
 
-        <footer class="Footer">
+                    <div class="div2">
+                        <p>Boné Forfun - Preto</p>
+                        <img src="img/Bone/BoneForfunPreto.png" alt="Camiseta Alegria Compartilhada">
+                        <div class="bones">
+                            <button class="comprar">COMPRAR</button>
+                            <p class="preco">R$25,99</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+        <footer>
             <p>&copy 2020</p>
             <a href="https://www.instagram.com/forfunoficial"><img src="img/Contato/Instagram.png"></a>
             <a href="https://twitter.com/forfunoficial"><img src="img/Contato/Twitter.png"></a>
