Modificando menu produtos

--- a/produtosB.html
+++ b/produtosB.html
@@ -53,7 +53,7 @@
             </div>
         </div>
         
-        <footer>
+        <footer class="Footer">
             <p>&copy 2020</p>
             <a href="https://www.instagram.com/forfunoficial"><img src="img/Contato/Instagram.png"></a>
             <a href="https://twitter.com/forfunoficial"><img src="img/Contato/Twitter.png"></a>
