Alterando 'Quem Somos'

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </section>
             
             <section id="sectionRight">
-                <p><a href=produtos.html">Ver mais</a></p>
+                <p><a href="produtos.html">Ver mais</a></p>
             </section>
         </div>
         
