--- a/produtosB.html
+++ b/produtosB.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <header>
-            <a href="index.html"><img src="img/Logo.png"></a>
+            <a href="index.html"><img src="img/Forfunlogo.png"></a>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
