Adicionando efeito aos botões e links, iniciando 'Eventos'

--- a/eventos.html
+++ b/eventos.html
@@ -21,7 +21,9 @@
                 </ul>
             </nav>
         </header>
-
+        <div id="forfunBG">
+            <img src="img/Fotos/ForfunBG.png" alt="Foto da banda">
+        </div>
         <div id="eventosProx">
            ADD  Próximos eventos
         </div>
