--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 rupo ao estúdio de Breno, baterista, da Darvin na época, em Niterói, onde 
                 tiveram sua primeira experiência com gravação em estúdio.
             </p>
-            <a href="quemSomos.html"><u>Saiba mais</u></a>
+            <a href="quemSomos.html"><u>Quem somos &ShortRightArrow;</u></a>
         </article>
 
         <footer>
