--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="quemSomos.html">Quem Somos</a></li>
+                    <li><a href="discografia.html">Discografia</a></li>
                     <li><a href="produtos.html">Produtos</a></li>
                     <li><a href="eventos.html">Eventos</a></li>
                     <li><a href="contato.html">Contato</a></li>
