Adicionando efeito às imagens

--- a/discografia.html
+++ b/discografia.html
@@ -3,14 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-       <!--<link rel="stylesheet" media="screen and (max-width: 600px)" href="smallscreen.css">
+        <!--<link rel="stylesheet" media="screen and (max-width: 600px)" href="smallscreen.css">
         <link rel="stylesheet" media="screen and (min-width: 992px)" href="widescreen.css">
         <link rel="stylesheet" media="screen and (min-width: 600px) and (max-width: 992px)" href="style.css">-->
         <link rel="stylesheet" href="widescreen.css">
         <title>Forfun - Página Inicial</title>
     </head>
     <body>
-        <header>
+        <header id="headerDisco">
             <a href="index.html"><img src="img/Forfunlogo.png"></a>
             <nav>
                 <ul>
@@ -51,22 +51,15 @@
                 <a href="https://www.youtube.com/watch?v=SCNYrvTS1v4">
                     <p>Ao Vivo no Disco Voador</p>
                 </a>
-                
             </div>
             <div id="CDG">
                 <a href="https://www.youtube.com/watch?v=5QFvqhZf2Y8&t=3s">
                     <p>Nu</p>
                 </a>
-                
             </div>
         </div>
 
-
-
-
-
-
-        <footer>
+        <footer id="footerDisco">
             <p>&copy 2020</p>
             <a href="https://www.instagram.com/forfunoficial"><img src="img/Contato/Instagram.png"></a>
             <a href="https://twitter.com/forfunoficial"><img src="img/Contato/Twitter.png"></a>
