--- a/eventos.html
+++ b/eventos.html
@@ -26,6 +26,10 @@
         <div id="forfunBG">
             <img src="img/Fotos/ForfunBG.png" alt="Foto da banda">
         </div>
+        <div id="eventos">
+            <p id="eventosA">Eventos anteriores</p>
+            <p id="eventosB">Próximos eventos</p>
+        </div>
 
         <footer class="Footer">
             <p>&copy 2020</p>
