Adicionando página de eventos - próximos shows

--- a/eventos.html
+++ b/eventos.html
@@ -27,8 +27,8 @@
             <img src="img/Fotos/ForfunBG.png" alt="Foto da banda">
         </div>
         <div id="eventos">
-            <p id="eventosA">Eventos anteriores</p>
-            <p id="eventosB">Próximos eventos</p>
+            <a href="#" id="eventosA"><p>Eventos anteriores</p></a>
+            <a href="eventos2.html" id="eventosB"><p>Próximos eventos</p></a>
         </div>
 
         <footer class="Footer">
