--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         </tr>
                         <tr>
                             <td>16/04/2021</td>
-                            <td>Ouro Preto - MG</td>
+                            <td>Belo Horizonte - MG</td>
                         </tr>
                         <tr>
                             <td>22/04/2021</td>
@@ -54,11 +54,11 @@
                         </tr>
                         <tr>
                             <td>28/04/2021</td>
-                            <td>Ilhéus - BA</td>
+                            <td>Salvador- BA</td>
                         </tr>
                         <tr>
                             <td>12/05/2021</td>
-                            <td>Formosa - GO</td>
+                            <td>Campo Grande - MS</td>
                         </tr>
                     </table>
             </section>
