Alterando legenda das fotos

--- a/eventos1.html
+++ b/eventos1.html
@@ -27,8 +27,8 @@
         <div id="galeria">
             <a href="#"><img src="img/Icone/setaEsq.jpg" alt="Seta para esquerda" class="seta" onclick="Voltar()"></a>
             <figure>
-                <img src="img/Galeria/ShowFundiçaoProgresso.png" alt="Show no Fundição Progresso" id="fotoAtual">
-                <figcaption>Show Fundição Progresso</figcaption>
+                <img src="img/Galeria/ShowRioDeJaneiro.png" alt="Show no Fundição Progresso" id="fotoAtual">
+                <figcaption id="legenda">Show Fundição Progresso</figcaption>
             </figure>
 
             <a href="#"><img src="img/Icone/setaDir.jpg" alt="Seta para direita" class="seta" onclick="Avancar()"></a>
