Adicionando novas fotos de galeria e alterando altura do cabeçalho

--- a/eventos1.html
+++ b/eventos1.html
@@ -28,7 +28,7 @@
             <a href="#"><img src="img/Icone/setaEsq.jpg" alt="Seta para esquerda" class="seta" onclick="Voltar()"></a>
             <figure>
                 <img src="img/Galeria/ShowRioDeJaneiro.png" alt="Show no Fundição Progresso" id="fotoAtual">
-                <figcaption id="legenda">Show Fundição Progresso</figcaption>
+                <figcaption id="legenda">02-01-2020 Rio de Janeiro</figcaption>
             </figure>
 
             <a href="#"><img src="img/Icone/setaDir.jpg" alt="Seta para direita" class="seta" onclick="Avancar()"></a>
