Adicionando Ver Mais no texto principal sobre a banda - fonte: wikipedia

--- a/index.html
+++ b/index.html
@@ -80,8 +80,22 @@
                 Thiago Niemeyer, vocalista da banda Darvin, foi convidado e levou o g
                 rupo ao estúdio de Breno, baterista, da Darvin na época, em Niterói, onde 
                 tiveram sua primeira experiência com gravação em estúdio.
+                <a href="#" id="verMais" onClick="verMais()"><u>Ver mais</u></a>
             </p>
-            <a href="quemSomos.html"><u>Quem somos &ShortRightArrow;</u></a>
+
+            <p id="verMaisForfun">
+                Em dois dias, eles gravaram quatro canções, e na mesma semana, contando com a 
+                ajuda de mais um grande amigo, Flash, colocaram no ar o primeiro site da banda.
+                No mesmo ano fizeram novas gravações e lançaram duas canções num CD demo, que 
+                vendiam por cinco reais nos concertos. Paralelamente, divulgavam as faixas por 
+                meio da internet, no boca-a-boca, e de todas as maneiras possíveis.
+                Em seguida, a banda teve mais uma mudança de formação: Vitor foi para a segunda 
+                guitarra e Rodrigo Costa assumiu o baixo, passando também a dividir os vocais com Danilo.
+                <a href="#" id="verMenos" onClick="verMenos()"><u>Ver menos</u></a>
+            </p>
+
+
+            <a href="quemSomos.html" id="quemSomosID"><u>Quem somos &ShortRightArrow;</u></a>
         </article>
 
         <footer>
