Alterando funcao de ver mais

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         
         <article>
             <h1>Forfun</h1>
-            <p>
+            <p id="forfunInicial">
                 Iniciada como um trio, no ano de 2001, a banda Forfun é composta 
                 por Danilo Cutrim na guitarra e vocal, Vitor Isensee no baixo e 
                 Bruno Tizé na bateria. Bruno Tizé foi substituído por Nicolas Christ, 
@@ -82,18 +82,29 @@
                 tiveram sua primeira experiência com gravação em estúdio.
                 <a href="#" id="verMais" onClick="verMais()"><u>Ver mais</u></a>
             </p>
-
-            <p id="verMaisForfun">
-                Em dois dias, eles gravaram quatro canções, e na mesma semana, contando com a 
-                ajuda de mais um grande amigo, Flash, colocaram no ar o primeiro site da banda.
-                No mesmo ano fizeram novas gravações e lançaram duas canções num CD demo, que 
-                vendiam por cinco reais nos concertos. Paralelamente, divulgavam as faixas por 
-                meio da internet, no boca-a-boca, e de todas as maneiras possíveis.
-                Em seguida, a banda teve mais uma mudança de formação: Vitor foi para a segunda 
-                guitarra e Rodrigo Costa assumiu o baixo, passando também a dividir os vocais com Danilo.
-                <a href="#" id="verMenos" onClick="verMenos()"><u>Ver menos</u></a>
-            </p>
-
+            <div  id="verMaisForfun">
+                <p>
+                    Iniciada como um trio, no ano de 2001, a banda Forfun é composta 
+                    por Danilo Cutrim na guitarra e vocal, Vitor Isensee no baixo e 
+                    Bruno Tizé na bateria. Bruno Tizé foi substituído por Nicolas Christ, 
+                    um antigo amigo de escola de Danilo e baterista de várias outras bandas, 
+                    como Acesso de Raiva, Riveraid, e 15 Kelvin, banda na qual os dois chegaram 
+                    a tocar juntos, em 1998.
+                    Thiago Niemeyer, vocalista da banda Darvin, foi convidado e levou o g
+                    rupo ao estúdio de Breno, baterista, da Darvin na época, em Niterói, onde 
+                    tiveram sua primeira experiência com gravação em estúdio.
+                </p>
+                <p>
+                    Em dois dias, eles gravaram quatro canções, e na mesma semana, contando com a 
+                    ajuda de mais um grande amigo, Flash, colocaram no ar o primeiro site da banda.
+                    No mesmo ano fizeram novas gravações e lançaram duas canções num CD demo, que 
+                    vendiam por cinco reais nos concertos. Paralelamente, divulgavam as faixas por 
+                    meio da internet, no boca-a-boca, e de todas as maneiras possíveis.
+                    Em seguida, a banda teve mais uma mudança de formação: Vitor foi para a segunda 
+                    guitarra e Rodrigo Costa assumiu o baixo, passando também a dividir os vocais com Danilo.
+                    <a href="#" id="verMenos" onClick="verMenos()"><u>Ver menos</u></a>
+                </p>
+            </div>
 
             <a href="quemSomos.html" id="quemSomosID"><u>Quem somos &ShortRightArrow;</u></a>
         </article>
