--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-       <!--<link rel="stylesheet" media="screen and (max-width: 600px)" href="smallscreen.css">
-        <link rel="stylesheet" media="screen and (min-width: 992px)" href="widescreen.css">
-        <link rel="stylesheet" media="screen and (min-width: 600px) and (max-width: 992px)" href="style.css">-->
-        <link rel="stylesheet" href="widescreen.css">
+       <link rel="stylesheet" media="screen and (max-width: 760px)" href="smallscreen.css">
+        <link rel="stylesheet" media="screen and (min-width: 1200px)" href="widescreen.css">
+        <link rel="stylesheet" media="screen and (min-width: 760px) and (max-width: 1200px)" href="style.css">
+        <!--<link rel="stylesheet" href="widescreen.css">-->
         <title>Forfun - Página Inicial</title>
     </head>
     <body>
@@ -80,7 +80,7 @@
                 Thiago Niemeyer, vocalista da banda Darvin, foi convidado e levou o g
                 rupo ao estúdio de Breno, baterista, da Darvin na época, em Niterói, onde 
                 tiveram sua primeira experiência com gravação em estúdio.
-                <a href="#" id="verMais" onClick="verMais()"><u>Ver mais</u></a>
+                <a href="#forfunInicial" id="verMais" onClick="verMais()"><u>Ver mais</u></a>
             </p>
             <div  id="verMaisForfun">
                 <p>
@@ -102,7 +102,7 @@
                     meio da internet, no boca-a-boca, e de todas as maneiras possíveis.
                     Em seguida, a banda teve mais uma mudança de formação: Vitor foi para a segunda 
                     guitarra e Rodrigo Costa assumiu o baixo, passando também a dividir os vocais com Danilo.
-                    <a href="#" id="verMenos" onClick="verMenos()"><u>Ver menos</u></a>
+                    <a href="#verMaisForfun" id="verMenos" onClick="verMenos()"><u>Ver menos</u></a>
                 </p>
             </div>
 
@@ -117,6 +117,6 @@
             <a href="https://www.youtube.com/channel/UCG2dP282Bn5hS-jB7jDcyEA"><img src="img/Contato/Youtube.png"></a>
         </footer>
         
-       <script src="script.js"></script> 
+  <!--  <script src="script.js"></script> -->   
     </body>
 </html>
